# leechcraft

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  CHANGELOG  COPYING  INSTALL  README  README.md  changelogdialog.cpp  changelogdialog.h  changelogdialog.ui  core.cpp  core.h  default.vim  index.html  leechcraft_en.ts  leechcraft_ru.qm  leechcraft_ru.ts  logshower.cpp  main.cpp  main.pro  mainwindow.cpp  mainwindow.h  plugininfo.cpp  plugininfo.h  pluginlist.h  pluginlisttablewidgeticon.cpp  pluginmanager.cpp  pluginmanager.h  resources.qrc  src.pro  trunk.pro
iconsets/crystalz/: CMakeLists.txt  crystalz.mapping
iconsets/oxygen/: CMakeLists.txt  oxygen.mapping
iconsets/tango/: CMakeLists.txt  Tango.mapping
iconsets/zombus/: CMakeLists.txt
lcnp/src/: CMakeLists.txt  interceptor.cpp  interceptor.h
src/: .clang-tidy  CMakeLists.txt  CMakePresets.json  CommonLCSetup.cmake  Copyright.txt  FindLeechCraft.cmake  FindLeechCraft.cmake.in  Info.plist.in  InitLCPlugin.cmake  InitLCPlugin.cmake.in  ReadMe.txt  UseLeechCraft.cmake.in  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  acceptlangwidget.cpp  acceptlangwidget.h  acceptlangwidget.ui  application.cpp  application.h  appstyler.cpp  appstyler.h  authenticationdialog.cpp  authenticationdialog.h  authenticationdialog.ui  categorymerger.cpp  categorymerger.h  changelogdialog.cpp  changelogdialog.h  childactioneventfilter.cpp  childactioneventfilter.h  clipboardwatcher.cpp  clipboardwatcher.h  cmake_uninstall.cmake.in  common.h  commonjobadder.cpp  commonjobadder.h  commonjobadder.ui  config.h.in  copyright.txt  (+171 more)
src/3dparty/: qxttooltip.cpp  qxttooltip.h
src/cmake/: ECMFindModuleHelpers.cmake  FindPhonon.cmake  FindQJSON.cmake  FindQtKOAuth.cmake  FindQwt.cmake  FindRBTorrent.cmake  FindVMime.cmake  FindWt.cmake  FindXCB.cmake  LibHelperWin32Macros.cmake
src/codegen/: CMakeLists.txt  codegen.cpp
src/core/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  acceptlangwidget.cpp  acceptlangwidget.h  application.cpp  application.h  authenticationdialog.cpp  authenticationdialog.h  authenticationdialog.ui  childactioneventfilter.cpp  childactioneventfilter.h  clargs.cpp  clargs.h  colorthemeengine.cpp  colorthemeengine.h  commonjobadder.cpp  commonjobadder.h  core.cpp  core.h  coreinstanceobject.cpp  coreinstanceobject.h  coreplugin2manager.cpp  coreplugin2manager.h  coreproxy.cpp  coreproxy.h  coresettings.xml  debugmessagehandler.cpp  debugmessagehandler.h  dockmanager.cpp  dockmanager.h  docktoolbarmanager.cpp  docktoolbarmanager.h  entitymanager.cpp  entitymanager.h  graphwidget.cpp  graphwidget.h  handlerchoicedialog.cpp  handlerchoicedialog.h  (+96 more)
src/data/: compress  leechcraft-add-file.1  leechcraft-handle-file.1  leechcraft-qt5.1  leechcraft.1
src/debian/: .gitignore  build.sh  changelog  control  copyright  do_changelog.sh  leechcraft-iconset-oxygen.install  leechcraft-iconset-tango.install  leechcraft-libplugininterface.install  leechcraft-plugin-aggregator.install  leechcraft-plugin-bittorrent.install  leechcraft-plugin-cstp.install  leechcraft-plugin-dbusmanager.install  leechcraft-plugin-deadlyrics.install  leechcraft-plugin-historyholder.install  leechcraft-plugin-lmp.install  leechcraft-plugin-networkmonitor.install  leechcraft-plugin-poshuku-cleanweb.install  leechcraft-plugin-poshuku-filescheme.install  leechcraft-plugin-poshuku-fua.install  leechcraft-plugin-poshuku-networkmonitor.install  leechcraft-plugin-poshuku.install  leechcraft-plugin-seekthru.install  leechcraft-xmlsettingsdialog.install  leechcraft.install  libplugininterface.postinst  rules  svnlogxml.sh  svnlogxml2changelog.pl
src/exceptions/: CMakeLists.txt  config.h  default.vim  generic.cpp  generic.h  invalidparameter.h  io.cpp  io.h  logic.cpp  logic.h  notimplemented.cpp  notimplemented.h  outofbounds.cpp  outofbounds.h  situative.cpp  situative.h
src/freedesktop/: leechcraft-bittorrent.desktop  leechcraft-monocle-fxb.desktop  leechcraft-monocle-seen.desktop  leechcraft-qt5.desktop  leechcraft.desktop
src/iconsets/: CMakeLists.txt
src/interfaces/: default.vim  entityconstants.h  entitytesthandleresult.h  iactionsexporter.h  iadvancedhtmleditor.h  iadvancedplaintexteditor.h  ianemitter.h  icustomprovider.h  idatafilter.h  idndtab.h  idownload.h  iembedtab.h  ientityhandler.h  ifinder.h  ihavediaginfo.h  ihaverecoverabletabs.h  ihavesettings.h  ihaveshortcuts.h  ihavetabs.h  iimportexport.h  iinfo.h  ijobholder.h  ijobholderrepresentationhandler.h  imediaplayer.h  imenuembedder.h  imultitabs.h  imwproxy.h  interfaces.h  ipersistentstorageplugin.h  iplugin2.h  ipluginadaptor.h  ipluginready.h  iquarkcomponentprovider.h  iremovabledevmanager.h  iscriptloader.h  ishutdownlistener.h  ispellcheckprovider.h  istartupwizard.h  isummaryrepresentation.h  isyncable.h  (+12 more)
src/plugininterface/: CMakeLists.txt  addressparser.cpp  addressparser.h  backendselector.cpp  backendselector.h  backendselector.ui  basehookinterconnector.cpp  basehookinterconnector.h  basesettingsmanager.h  basicsettingsmanager.cpp  basicsettingsmanager.h  categoryselector.cpp  categoryselector.h  config.h  customcookiejar.cpp  customcookiejar.h  customnetworkreply.cpp  customnetworkreply.h  dblock.cpp  dblock.h  default.vim  defaulthookproxy.cpp  defaulthookproxy.h  exceptions.cpp  exceptions.h  fileremoveguard.cpp  fileremoveguard.h  filewriter.cpp  filewriter.h  filewriterthread.cpp  filewriterthread.h  flattofoldersproxymodel.cpp  flattofoldersproxymodel.h  flowlayout.cpp  flowlayout.h  graphwidget.cpp  graphwidget.h  guarded.h  historymodel.cpp  historymodel.h  (+39 more)
src/scripts/: leechcraft-add-file  leechcraft-handle-file  postinst
src/settingsdialog/: CMakeLists.txt  collectorwidget.cpp  collectorwidget.h  converters.cpp  converters.h  datatypes.cpp  default.vim  extendedspinbox.cpp  extendedspinbox.h  filepickerwidget.cpp  filepickerwidget.h  settingsdialog.cpp  settingsdialog.h  settingsiteminfo.cpp  settingsiteminfo.h  typehandler.cpp  typehandler.h  typelist.cpp  typelist.h
src/util/: CMakeLists.txt  dblock.cpp  (+67 more)
(+8719 files in other folders)
